# obsidian-git-bridge

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
src/obsidian_git_bridge/: __init__.py  cli.py  doctor.py  git_operations.py  git_ops.py  obsidian_config.py  vps_setup.py  wrappers.py
tests/: __init__.py  test_cli.py  test_git_ops.py  test_obsidian_config.py  test_vps_setup.py
